--- a/Surface/SurfacePhysics/SurfacePhysics.csproj
+++ b/Surface/SurfacePhysics/SurfacePhysics.csproj
@@ -158,6 +158,12 @@
       <Version>1.23.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\3rdParty\VelcroPhysics\VelcroPhysics\VelcroPhysics.csproj">
+      <Project>{C351E9AF-1850-49C5-B831-F3D9CCA6A01F}</Project>
+      <Name>VelcroPhysics</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
